TP8-Tavarifun/tests/bad/struct/t03.ml
type pair = { left: int; right: int } ;;
let a : pair = { left = 1; right = 2 } ;;
a.left <- 3 ;;
